01-blog/infra/k8s/comments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metada:
      labels:
        app: comments
      spec:
        containers:
          - name: comments
            image: bokkoa/comments
--- # SERVICE
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4005
      targetPort: 4005
