01-blog/infra/k8s/event-bus-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metada:
      labels:
        app: event-bus
      spec:
        containers:
          - name: event-bus
            image: bokkoa/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
