01-blog/infra/k8s/moderation-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metada:
      labels:
        app: moderation
      spec:
        containers:
          - name: moderation
            image: bokkoa/moderation
--- # SERVICE
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4001
      targetPort: 4001
