01-blog/infra/k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metada:
      labels:
        app: query
      spec:
        containers:
          - name: query
            image: bokkoa/query
--- # SERVICE
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
